fix(material/core): icons not aligned inside mat-option (#26054)
Fixes that icons projected inside an MDC-based `mat-option` weren't centered and didn't have the correct margin like the non-MDC version.

Fixes #26024.

--- a/src/material/core/option/option.scss
+++ b/src/material/core/option/option.scss
@@ -47,8 +47,10 @@
     }
   }
 
+  .mat-icon,
   .mat-pseudo-checkbox {
     margin-right: mdc-list-variables.$side-padding;
+    flex-shrink: 0;
 
     [dir='rtl'] & {
       margin-right: 0;
